style.css
/* Global styles
--------------------*/
.container{
	width:77%;
	margin:auto;
	overflow:hidden;
	font-size:1.2em;
}

.btn{
	height:40px;
	width:150px;
	background:white;
	color:green;
}

header, body{
	font-family:"Tahoma";
}


/* Header styles 
--------------------*/
header{
	margin-top:20px;
	margin-left:10%;
}

header section{
	height:75px;
	padding-top:10px;
}

header nav{
	float:right;
	padding-top:10px;
	position:relative;
}

a{
	color:black;
	text-decoration:none;
}

header li{
	display:inline;
	margin: 7px;
	padding: 10px 15px;
	background:lightblue;
	border: 2px solid black;
}

#top-header{
	width:88%;
	overflow:hidden;
	background:lightblue;
	border:5px solid black;
	border-radius:15px;
}

#title{
	font-family:sans-serif;
	margin-left:15px;
	float:left;
	padding-left:10px;
}

/* Body styles
------------------*/

body{
	margin:0px;
	padding:-1px;
	background-color:#deffff;
	background:linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.65)),
	url(typing.jpg) no-repeat;
	background-size: cover;
}
/*
#background-pic{
	text-align:center;
	border-radius:10px;
	margin-top: 20px;
	width:80%;
	height:250px;
	background:linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.65)),
	url(typing.jpg) no-repeat;
	background-size: cover;
}*/

#background-pic {
	padding-top:10px;
	text-align:center;
}

body #quote-api{
	margin-top: 20px;
	background-color:lightblue;
	border:5px solid #deeeee;
	border-radius:7px;
	padding:20px 50px
}

#typing-box{
	height:150px;
	width:100%;
	padding:7px 40px;
	border:5px solid gray;
	border-radius:5px;
	font-size:1.2em;
	margin-top:15px;
	box-sizing: border-box;
}

.text-box{
	text-align:center;
}

#restart{
	float:right;
}

#clock{
	font-weight:bold;
	font-size:20px;
}

#clock > div{
	width:150px;
	display:inline-block;
	padding-right:20px;
}


form input{
	height:30px;
	width:220px;
	margin-right:5px;
}

/* dropdown menu with browser support*/
body select { 
	display: inline-block; 
	padding: 10px 70px 10px 13px !important;
	margin-right:5px;
	max-width: 100%; 
	height: auto !important; 
	border: 2px solid silver; 
	border-radius: 10px; 
	background: url("download.png") right center no-repeat; 
	background-size:15px;
	background-color: #fff; 
	color: green; 
	font-size: 12px; 
	line-height: 16px !important; 
	appearance: none; 
	/* this is must */ -webkit-appearance: none; 
	-moz-appearance: none; } 

	/* body select.select_box option */ 
	body select option {
	 	padding: 0 4px; 
	} 

	/* for IE and Edge */ 
	select::-ms-expand { 
		display: none; 
	} 

	select:disabled::-ms-expand {
	 	background: #f60; 
	}

/* USe for nav bar instead
#dropdown{
	position:relative;
	display:inline-block;
}

.dropdown-content{
	/*display:none;	
	/*position:absolute;/
	background-color:white;
	min-width:160px;
	box-shadow: 0px 8px 16px 0px rgb(0,0,0,0.2);
	z-index-1;
}

.dropdown-content a{
	color:lightblue;
	padding: 12px 16px;
	display:block;
}

/* Change color of dropdown links on hover 
.dropdown-content a:hover {background-color: #ddd;}

/* Show the dropdown menu on hover 
.dropdown:hover .dropdown-content {display: initial;}

/* Change the background color of the dropdown button when the dropdown content is shown 
.dropdown:hover .dropdown {background-color: #3e8e41;}
*/

/* Footer Styles
---------------------*/
#footer-nav ul{
	list-style-type:none;
	padding:0;
	margin:0;
}

#footer-nav li{
	display:inline-block;
	font-size:0.7em;
	padding:5px;
}

#footer-nav a{
	color:blue;
}

#footer-nav{
	border-top: 2px solid black;
	margin-top:35px;
	background-color:white;
	width:100%;
}

#footer-nav div{
	width:77%;
	margin:auto;
	padding-top:3px;
}

#footer-nav h6{
	font-size:9px;
	margin-bottom:1px;
}

/* Media Queries
------------------*/
@media only screen and (min-device-width: 320px) and (max-device-width: 750px){
	.container{
		width:90%;
	}

	body{
		font-size: 0.6em;
	}

	header,
	header #top-header,
	header #title,
	header nav,
	header ul,
	header li{
		float:none;
		border:none;
		border-radius:0;
		margin:0;
		padding:0;
		height:auto;
	}

	header li{
		background:grey;
		font-size:1.2em;
		padding:5px;
	}

	a{
		color:lightgrey;
	}

	#top-header, header nav{
		display:block;
		text-align:center;
	}

	#top-header{
		width:100%;
		background-color:grey;
	}

	#option-and-btns, #newsletter, #footer-nav{
		text-align:center;
	}

	header{
		border-bottom:4px solid black;
	}

	body h1 ,#clock{
		font-size:15px;
	}

	.select-box{
		width:300px;
		padding: 5px 30px 5px 13px !important;
		font-size:10px;
		text-align-last:center;

	}

	.btn{
		font-size:10px;
		margin-top:5px;
		height:30px;
		width:135px;
	}

	#clock .timer,
	#clock .WPM,
	#clock .CPM {
		margin:0;
		width:100px;
		font-size:10px;
	}

	#clock div{	
		margin-top:5px;
		margin-bottom:5px;
		padding:0;
		width:85px;
		text-align:center;
	}

	#footer-nav h6{
		font-size:8px;
	}

	#newsletter input{
		height:21px;
	}

}

